fix center-alignment of div images

--- a/index3.css
+++ b/index3.css
@@ -137,6 +137,7 @@ main {
 #main-content-container div {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-end;
   margin-bottom: 3rem;
 }
